k8s/mysql.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deploy
  namespace: tfm-dev-amartinm82
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mysql
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.0.22
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: tfm-dev-amartinm82
  labels:
    app: mysql
spec:
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
      name: mysql-port
  selector:
    app: mysql
  type: ClusterIP
