k8s/users-api.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-deploy
  namespace: tfm-dev-amartinm82
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: users
  replicas: 1
  template:
    metadata:
      labels:
        app: users
    spec:
      restartPolicy: Always
      securityContext:
        runAsUser: 1001
      containers:
      - name: users
        image: amartinm82/tfm-users:trunk
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8443

---
apiVersion: v1
kind: Service
metadata:
  name: users-service
  namespace: tfm-dev-amartinm82
  labels:
    app: users
  annotations:
    dev.okteto.com/auto-ingress: 'false'
spec:
  ports:
  - port: 8443
    targetPort: 8443
    protocol: TCP
    name: users-port
  selector:
    app: users
  type: ClusterIP
